# cppRenderer

./: .gitignore  CMakeLists.txt  README.md
glad/include/glad/: gl.h
src/: camera.cpp  camera.h  cppRenderer.cpp  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  test.frag  test.vert  texture.cpp  texture.h  transform.cpp  transform.h
